fix(resume): add support for view and download resume on mobile

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -2,6 +2,10 @@
   height: 100vh;
 }
 
+.mobile-buttons.buttons-group {
+  display: none;
+}
+
 .buttons-group {
   display: flex;
   flex-direction: row;
@@ -42,5 +46,11 @@
   }
   #print {
     display: block;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .mobile-buttons.buttons-group {
+    display: flex;
   }
 }
